@@ -1818,6 +1818,17 @@ operator|.
 name|METASTORE_CACHE_PINOBJTYPES
 argument_list|)
 decl_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Setting MetaStore object pin classes with hive.metastore.cache.pinobjtypes=\""
+operator|+
+name|objTypes
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|objTypes
@@ -1890,8 +1901,50 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+else|else
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+name|type
+operator|+
+literal|" is not one of the pinnable object types: "
+operator|+
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|lang
+operator|.
+name|StringUtils
+operator|.
+name|join
+argument_list|(
+name|PINCLASSMAP
+operator|.
+name|keySet
+argument_list|()
+argument_list|,
+literal|" "
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
+block|}
+block|}
+else|else
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"PersistenceManagerFactory returned null DataStoreCache object. Unable to initialize object pin types defined by hive.metastore.cache.pinobjtypes"
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 return|return
